--- a/odns/paper.tex
+++ b/odns/paper.tex
@@ -49,17 +49,23 @@
 \title{\LARGE{\bf ODNS: Oblivious DNS}}
 
 %for single author (just remove % characters)
-%\author{
-%{\rm Your N.\ Here}\\
-%Your Institution
-%\and
-%{\rm Second Name}\\
-%Second Institution
+\author{
+{\rm Anne Edmundson}\\
+Princeton University
+\and
+{\rm Paul Schmitt}\\
+Princeton University
 % copy the following lines to add more authors
-% \and
-% {\rm Name}\\
-%Name Institution
-%} % end author
+ \and
+ {\rm Nick Feamster}\\
+Princeton University
+ \and
+ {\rm Jennifer Rexford}\\
+Princeton University
+ \and
+ {\rm Allison Mankin}\\
+Salesforce
+} % end author
 
 \maketitle
 
