--- a/pets/discussion.tex
+++ b/pets/discussion.tex
@@ -40,12 +40,12 @@ the content, as well as which clients are requesting which content.\\
 %all of the requests that any particular client is making; additionally, it may make
 %it more difficult for a CDN to identify the group of requests coming from a single
 %client, since a client's requests would mixed among multiple proxies. 
-\textbf{Legal questions and political pushback.} Recent cases surrounding
-the Stored Communications Act in the United States raise some questions over
-whether a system like \system{} might face legal challenges from law
-enforcement agencies. To protect user data against these types of challenges,
-Microsoft has already taken steps such as moving user data to data centers in
-Germany that are operated by entities outside the United States, such as
-T-Systems. It remains to be seen whether \system{} would face similar
-hurdles, but similar systems in the past have faced scrutiny and pushback from law
-enforcement.
+%\textbf{Legal questions and political pushback.} Recent cases surrounding
+%the Stored Communications Act in the United States raise some questions over
+%whether a system like \system{} might face legal challenges from law
+%enforcement agencies. To protect user data against these types of challenges,
+%Microsoft has already taken steps such as moving user data to data centers in
+%Germany that are operated by entities outside the United States, such as
+%T-Systems. It remains to be seen whether \system{} would face similar
+%hurdles, but similar systems in the past have faced scrutiny and pushback from law
+%enforcement.
