--- a/pets/paper.bib
+++ b/pets/paper.bib
@@ -20,6 +20,20 @@
   publisher={ACM}
 }
 
+@article{geambasu2009experiences,
+  title="{Experiences building security applications on DHTs}",
+  author={Geambasu, Roxana and Falkner, Jarret and Gardner, Paul and Kohno, Tadayoshi and Krishnamurthy, Arvind and Levy, Henry M},
+  journal={Technical Report, UW-CSE-09--09--01},
+  year={2009}
+}
+
+@inproceedings{wolchok2010defeating,
+  title="{Defeating Vanish with Low-Cost Sybil Attacks Against Large DHTs}",
+  author={Wolchok, Scott and Hofmann, Owen S and Heninger, Nadia and Felten, Edward W and Halderman, J Alex and Rossbach, Christopher J and Waters, Brent and Witchel, Emmett},
+  booktitle={NDSS},
+  year={2010}
+}
+
 @article{vogels2003power,
   title={The power of epidemics: robust communication for large-scale distributed systems},
   author={Vogels, Werner and Van Renesse, Robbert and Birman, Ken},
