--- a/pets/threat_model.tex
+++ b/pets/threat_model.tex
@@ -35,9 +35,9 @@ modifying content, disrupting communications (\eg, through denial of service), o
 blocking access, content, or requests. Prior work on securing
 CDNs has introduced methods to handle an actively malicious adversary by preserving the integrity of content 
 stored on CDN cache nodes~\cite{levy2015stickler}.  We do not address an adversary that tampers, modifies, or 
-deletes any data, content, or requests.  \annie{In addition, it is out of the scope of this work to prevent an attacker 
+deletes any data, content, or requests.  In addition, it is out of the scope of this work to prevent an attacker 
 that has global monitoring knowledge; for example, \system{} will not prevent an attacker who can see all incoming and 
-outgoing messages from all clients and exit proxies.}
+outgoing messages from all clients and exit proxies.
 
 \subsection{Security and Privacy Goals for \system{}}
 \label{sec:goals}
