more precise section headings

--- a/pets/threat_model.tex
+++ b/pets/threat_model.tex
@@ -1,4 +1,4 @@
-\section{Threat Model and Security Goals}
+\section{Threat Model and Goals}
 \label{sec:threat}
 In this section, we describe our threat model, outline the capabilities of the 
 attacker, and introduce the design goals and protections that \system{} provides.
@@ -39,7 +39,7 @@ deletes any data, content, or requests.  In addition, it is out of the scope of 
 that has global monitoring knowledge; for example, \system{} will not prevent an attacker who can see all incoming and 
 outgoing messages from all clients and exit proxies.
 
-\subsection{Security and Privacy Goals for \system{}}
+\subsection{Security and Privacy Goals}
 \label{sec:goals}
 
 To defend against the adversary described in Section~\ref{sec:attacker}, we highlight
