--- a/pets/performance.tex
+++ b/pets/performance.tex
@@ -24,20 +24,21 @@
 \end{figure*}
 
 
-\section{Performance Analysis}
+\section{Performance Evaluation}
 \label{sec:performance}
 To evaluate how much overhead is caused by \system{} we measure the performance 
 of \system{}.  In addition to understanding the latency and overhead produced by the 
 system, we also discuss the scalability of the design and show how \system{} scales 
 well with an increasing number of clients.
 
-\subsection{\system{} Overhead}
+\subsection{Throughput and Latency Overhead}
 For measuring performance characteristics of \system{}, we use the implementation 
 described in Section \ref{sec:implementation}.  Figure \ref{fig:impl} shows 
 how our measurements reflect \system{} (solid line) and a traditional CDN (dotted 
 line).  
 
-Figure \ref{fig:completion} shows the time to first byte (TTFB) and the time for both \system{} and 
+Figure~\ref{fig:completion} shows the time to first byte (TTFB) and the time for
+both \system{} and 
 without \system{}.  We can see the the TTFB using \system{} grows linearly with 
 file size, whereas without \system{} TTFB remains fairly constant.  Interestingly, 
 we can see that there are some fixed time operations that \system{} performs, which 
@@ -90,8 +91,9 @@ decrypting the response with the session key $k_{session}$.
 %\label{fig:overhead2}
 %\end{figure}
 
-\subsection{Scalability}
+\subsection{Scaling with Users and Content}
 \label{sec:scalability}
+
 For evaluating performance, we are also concerned with how well \system{} will scale with more users 
 and more URLs.  In particular, we need to reason about how much load is put on the exit proxies as the 
 system grows; clients do not bare much load in the system as they simply proxy requests and the CDN is designed 
