--- a/pets/security.tex
+++ b/pets/security.tex
@@ -1,6 +1,8 @@
-\section{Security Analysis}
+\section{Attacks Against \system{}}
 \label{sec:sec}
-We analyze and discuss how \system{} addresses different attacks.  Table \ref{tab:sec_table} 
+
+We analyze and discuss how \system{} defends against different attacks.  Table 
+\ref{tab:sec_table}
 shows what security and privacy features \system{} provides in comparison to other related 
 systems.
 
